# src/Services/Nt.Booking/Controllers/BookingApi.cs
@@ -1,0 +1,158 @@
+/*
+ * NT.Access
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 0.0.0
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+using System;
+using Microsoft.AspNetCore.Mvc;
+using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Http;
+
+namespace Nt.Booking.Controllers
+{
+    /// <summary>
+    /// 
+    /// </summary>
+    [ApiController]
+    public class BookingApiController : ControllerBase
+    {
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <param name="mediumId">xxxyyy</param>
+        /// <response code="200"></response>
+        /// <response code="400"></response>
+        [HttpGet]
+        [Route("/api/v1/mediums/{mediumId}")]
+        public virtual IActionResult GetMedium([FromRoute][Required]string mediumId)
+        {
+            try
+            {
+                var information = new Models.Information();
+                information.Currency = "EUR";
+                information.DiscountType = "ABC";
+                //
+                var credit = new Models.Credit();
+                credit.Amount = 1222;
+                //
+                var owner = new Models.Owner();
+                owner.Name = "Norbert Rastl";
+                //
+                information.Credit = credit;
+                information.Owner = owner;
+                return new ObjectResult(information);
+            }
+            catch (BookingException ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+            catch (Exception ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+        }
+
+        /// <summary>
+        /// 
+        /// </summary>
+
+        /// <param name="mediumId">returns a list of mediums / chips / rooms / vouchers</param>
+        /// <response code="200"></response>
+        /// <response code="400"></response>
+        [HttpGet]
+        [Route("/api/v1/mediums/")]
+        public virtual IActionResult GetMediums([FromRoute][Required]string mediumId)
+        {
+            try
+            {
+                return StatusCode(StatusCodes.Status501NotImplemented, "/api/v1/mediums/");
+            }
+            catch (BookingException ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+            catch (Exception ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+        }
+
+        /// <summary>
+        /// Get the status of the host / POS. This will be regularly called by clients to detect status changes (like host / POS restarts)
+        /// </summary>
+        /// <param name="mediumId">id of the medium</param>
+        /// <param name="data"></param>
+        /// <response code="200"></response>
+        [HttpPost]
+        [Route("/api/v1/mediums/{mediumId}/payments")]
+        public virtual IActionResult MediumPayment([FromRoute][Required]string mediumId, [FromBody]Models.Payment data)
+        {
+            try { 
+                return StatusCode(StatusCodes.Status501NotImplemented, "/api/v1/mediums/{mediumId}/payments");
+            }
+            catch (BookingException ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+            catch (Exception ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+        }
+
+        /// <summary>
+        /// Get the status of the host / POS. This will be regularly called by clients to detect status changes (like host / POS restarts)
+        /// </summary>
+        /// <param name="mediumId">xxxyyy</param>
+        /// <param name="data"></param>
+        /// <response code="200"></response>
+        [HttpPost]
+        [Route("/api/v1/mediums/{mediumId}/cancellations")]
+        public virtual IActionResult MediumCancellation([FromRoute][Required]string mediumId, [FromBody]Models.Cancellation data)
+        {
+            try { 
+                return StatusCode(StatusCodes.Status501NotImplemented, "/api/v1/mediums/{mediumId}/cancellations");
+            }
+            catch (BookingException ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+            catch (Exception ex)
+            {
+                return GeExceptiontResponse(ex);
+            }
+        }
+
+        #region private methods
+
+        private ObjectResult GeExceptiontResponse(BookingException ex)
+        {
+            Nt.Logging.Log.Server.Error(ex, HttpContext.Request.Path + "|");
+            var error = new Models.Error();
+            error.Message = ex.Message;
+            error.UserMessage = ex.Message;
+            error.PartnerCode = ex.PartnerCode;
+            error.PartnerMessage = ex.PartnerMessage;
+            error.Code = ex.Code;
+            //500
+            return StatusCode(StatusCodes.Status500InternalServerError, error);
+        }
+
+        private ObjectResult GeExceptiontResponse(Exception ex)
+        {
+            Nt.Logging.Log.Server.Error(ex, HttpContext.Request.Path + "|");
+            var error = new Models.Error();
+            error.Message = ex.Message;
+            //500
+            return StatusCode(StatusCodes.Status500InternalServerError, error);
+        }
+
+        #endregion
+
+    }
+}
