# src/Services/Nt.Booking/Models/Error.cs
@@ -1,5 +1,5 @@
 /*
- * NT.Access
+ * NT.Booking
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
@@ -13,41 +13,41 @@ using System.Text;
 using System.Runtime.Serialization;
 
 namespace Nt.Booking.Models
-{
+{ 
     /// <summary>
     /// error object
     /// </summary>
     [DataContract]
     public partial class Error : IEquatable<Error>
-    {
+    { 
         /// <summary>
         /// Gets or Sets Message
         /// </summary>
-        [DataMember(Name = "message")]
+        [DataMember(Name="message")]
         public string Message { get; set; }
-
-        /// <summary>
-        /// Gets or Sets Type
-        /// </summary>
-        [DataMember(Name = "type")]
-        public string Type { get; set; }
 
         /// <summary>
         /// Gets or Sets Code
         /// </summary>
-        [DataMember(Name = "code")]
-        public int? Code { get; set; }
+        [DataMember(Name="code")]
+        public string Code { get; set; }
 
         /// <summary>
-        /// Gets or Sets UserTitle
+        /// Gets or Sets PartnerMessage
         /// </summary>
-        [DataMember(Name = "userTitle")]
-        public string UserTitle { get; set; }
+        [DataMember(Name="partnerMessage")]
+        public string PartnerMessage { get; set; }
+
+        /// <summary>
+        /// Gets or Sets PartnerCode
+        /// </summary>
+        [DataMember(Name="partnerCode")]
+        public string PartnerCode { get; set; }
 
         /// <summary>
         /// Gets or Sets UserMessage
         /// </summary>
-        [DataMember(Name = "userMessage")]
+        [DataMember(Name="userMessage")]
         public string UserMessage { get; set; }
 
         /// <summary>
@@ -59,9 +59,9 @@ namespace Nt.Booking.Models
             var sb = new StringBuilder();
             sb.Append("class Error {\n");
             sb.Append("  Message: ").Append(Message).Append("\n");
-            sb.Append("  Type: ").Append(Type).Append("\n");
             sb.Append("  Code: ").Append(Code).Append("\n");
-            sb.Append("  UserTitle: ").Append(UserTitle).Append("\n");
+            sb.Append("  PartnerMessage: ").Append(PartnerMessage).Append("\n");
+            sb.Append("  PartnerCode: ").Append(PartnerCode).Append("\n");
             sb.Append("  UserMessage: ").Append(UserMessage).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
@@ -99,27 +99,27 @@ namespace Nt.Booking.Models
             if (ReferenceEquals(null, other)) return false;
             if (ReferenceEquals(this, other)) return true;
 
-            return
+            return 
                 (
                     Message == other.Message ||
                     Message != null &&
                     Message.Equals(other.Message)
-                ) &&
-                (
-                    Type == other.Type ||
-                    Type != null &&
-                    Type.Equals(other.Type)
-                ) &&
+                ) && 
                 (
                     Code == other.Code ||
                     Code != null &&
                     Code.Equals(other.Code)
-                ) &&
+                ) && 
                 (
-                    UserTitle == other.UserTitle ||
-                    UserTitle != null &&
-                    UserTitle.Equals(other.UserTitle)
-                ) &&
+                    PartnerMessage == other.PartnerMessage ||
+                    PartnerMessage != null &&
+                    PartnerMessage.Equals(other.PartnerMessage)
+                ) && 
+                (
+                    PartnerCode == other.PartnerCode ||
+                    PartnerCode != null &&
+                    PartnerCode.Equals(other.PartnerCode)
+                ) && 
                 (
                     UserMessage == other.UserMessage ||
                     UserMessage != null &&
@@ -137,22 +137,22 @@ namespace Nt.Booking.Models
             {
                 var hashCode = 41;
                 // Suitable nullity checks etc, of course :)
-                if (Message != null)
+                    if (Message != null)
                     hashCode = hashCode * 59 + Message.GetHashCode();
-                if (Type != null)
-                    hashCode = hashCode * 59 + Type.GetHashCode();
-                if (Code != null)
+                    if (Code != null)
                     hashCode = hashCode * 59 + Code.GetHashCode();
-                if (UserTitle != null)
-                    hashCode = hashCode * 59 + UserTitle.GetHashCode();
-                if (UserMessage != null)
+                    if (PartnerMessage != null)
+                    hashCode = hashCode * 59 + PartnerMessage.GetHashCode();
+                    if (PartnerCode != null)
+                    hashCode = hashCode * 59 + PartnerCode.GetHashCode();
+                    if (UserMessage != null)
                     hashCode = hashCode * 59 + UserMessage.GetHashCode();
                 return hashCode;
             }
         }
 
         #region Operators
-#pragma warning disable 1591
+        #pragma warning disable 1591
 
         public static bool operator ==(Error left, Error right)
         {
@@ -164,7 +164,7 @@ namespace Nt.Booking.Models
             return !Equals(left, right);
         }
 
-#pragma warning restore 1591
+        #pragma warning restore 1591
         #endregion Operators
     }
 }
