# src/Services/Nt.Booking/swagger.yaml
@@ -1,7 +1,7 @@
 x-generator: NSwag v13.1.2.0 (NJsonSchema v10.0.24.0 (Newtonsoft.Json v12.0.0.0))
 swagger: '2.0'
 info:
-  title: NT.Access
+  title: NT.Booking
   version: 0.0.0
 host: '10.0.0.136:12346'
 schemes:
@@ -15,7 +15,7 @@ paths:
       parameters:
         - type: string
           name: mediumId
-          description: xxxyyy
+          description: returns information of a certain medium / chip / room / voucher
           in: path
           required: true
           x-nullable: false
@@ -27,6 +27,33 @@ paths:
           description: ''
           schema:
             $ref: '#/definitions/Information'
+        '400':
+          x-nullable: false
+          description: ''
+          schema:
+            $ref: '#/definitions/Error'
+  '/api/v1/mediums/':
+    get:
+      tags:
+        - medium
+      operationId: getAllMedium
+      parameters:
+        - type: string
+          name: mediumId
+          description: returns a list of mediums / chips / rooms / vouchers
+          in: path
+          required: true
+          x-nullable: false
+      produces:
+        - application/json
+      responses:
+        '200':
+          x-nullable: false
+          description: ''
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Information'
         '400':
           x-nullable: false
           description: ''
@@ -62,7 +89,7 @@ paths:
           x-nullable: false
           description: ''
           schema:
-            $ref: '#/definitions/Information'
+            $ref: '#/definitions/Booking'
   '/api/v1/mediums/{mediumId}/cancellations':
     post:
       tags:
@@ -93,20 +120,17 @@ paths:
           x-nullable: false
           description: ''
           schema:
-            $ref: '#/definitions/Information'
+            $ref: '#/definitions/Booking'
 definitions:
   Information:
     description: This object contains all Information of the medium
     type: object
     properties:
       owner: 
-        x-nullable: true
         $ref: '#/definitions/Owner'
       debit:
-        x-nullable: true
         $ref: '#/definitions/Debit'
       credit:
-        x-nullable: true
         $ref: '#/definitions/Credit'
       currency: 
         description: currency in ISO 4217 (EUR/CHF/GBP/USD/JPY/CNY/...)
@@ -120,17 +144,16 @@ definitions:
     properties:
       message:
         type: string
-      type: 
-        type: string
       code:
-        type: integer
-        format: int32
-      userTitle:
+        type: string
+      partnerMessage:
+        type: string
+      partnerCode: 
         type: string
       userMessage:
         type: string
   Payment:
-    description: This object contains all Information of the payment with a medium
+    description: This object contains all information of the payment with a medium
     type: object
     properties:
       id:
@@ -138,12 +161,20 @@ definitions:
       name:
         type: string
   Cancellation:
-    description: This object contains all Information of the cancellation with a medium
+    description: This object contains all information of the cancellation with a medium
     type: object
     properties:
       id:
         type: string
       name:
+        type: string
+  Booking:
+    description: This object contains all information of a booking (payment/cancellation)
+    type: object
+    properties:
+      id:
+        type: string
+      userMessage:
         type: string
   Debit: 
     description: debit object 
